--- a/app/templates/product/product-page.html
+++ b/app/templates/product/product-page.html
@@ -7,18 +7,17 @@
         <a class="go-back" href="bunnies.html">
             <img src="../../static/img/icons/arrow.png" alt="back arrow">
         </a>
-        <h1 id="productTitle">იასამნისფერი სათამაშო ბაჭია</h1>
+        <h1 id="productTitle">{{ toy.name_geo }}</h1>
         <div class="product-details">
             <div class="product-image">
-                <img src="../../static/img/products/bunny-purple.jpg" alt="purple bunny toy">
+                <img src="{{ toy.photo }}" alt="{{ toy.name_eng }}">
             </div>
             <div class="product-description">
-                <p id="description">რბილი სათამაშო ბაჭია დამზადებულია მაღალი ხარისხის ანტიალერგიული ძაფებისაგან.
-                    სიმაღლე: 24სმ. შესაძლებელია გარეცხვა დელიკატურ რეჟიმზე. უსაფრთხოა ბავშვებისათვის</p>
+                <p id="description">{{ toy.desc_geo }}</p>
                 <div class="buy">
                     <span id="price">ღირებულება:</span>
                     <div>
-                        <span>35₾</span>
+                        <span>{{ toy.price }}₾</span>
                         <a id="buyA">
                             <button class="add-to-cart" id="buyButton">შეძენა</button>
                         </a>
