--- a/app/templates/main/index.html
+++ b/app/templates/main/index.html
@@ -16,7 +16,7 @@
                    onclick="PageReload()">
                     <img src="{{ url_for('static', filename='img/category covers/bunny-category-cover.jpg') }}"
                          alt="pink bunny toy">
-                    <h3 id="categoryBunnies">{{ category.name_geo }}</h3>
+                    <h3>{{ category.name_geo }}</h3>
                 </a>
             </div>
             {% endfor %}
