--- a/app/templates/layouts/base.html
+++ b/app/templates/layouts/base.html
@@ -31,7 +31,7 @@
                 <li><a id="questionsTab" href="static/pages/questions.html">კითხვები</a></li>
             </ul>
             <div class="logo" id="logoDiv">
-                <a id="logoLink" href="{{ url_for('main.home') }}" data-reload onclick="PageReload()">
+                <a id="logoLink" href="{{ url_for('main.home') }}">
                     <img src="{{ url_for('static', filename='img/amigurumi logo.svg') }}" alt="logo">
                 </a>
             </div>
