--- a/app/templates/layouts/base.html
+++ b/app/templates/layouts/base.html
@@ -23,8 +23,8 @@
     <nav>
         <div class="container header-container">
             <ul class="languages">
-                <li><a href="#ka" data-reload onclick="PageReload()">KA</a></li>
-                <li><a href="#eng" data-reload onclick="PageReload()">EN</a></li>
+                <li><a href="#ka">KA</a></li>
+                <li><a href="#eng">EN</a></li>
             </ul>
             <ul class="pages">
                 <li><a id="featuredProducts" href="#featured">პოპულარული</a></li>
