--- a/app/templates/layouts/base.html
+++ b/app/templates/layouts/base.html
@@ -18,6 +18,7 @@
 </head>
 <body>
 {% block animation %}
+
 {% endblock %}
 <header>
     <nav>
@@ -76,7 +77,9 @@
         </div>
     </div>
 </header>
-{% block main %}{% endblock %}
+{% block main %}
+
+{% endblock %}
 <footer id="contact-us">
     <nav>
         <div class="social-icons">
