--- a/app/templates/product/bunnies.html
+++ b/app/templates/product/bunnies.html
@@ -7,7 +7,12 @@
         <a class="go-back" href="../..">
             <img src="{{ url_for('static', filename='img/icons/arrow.png') }}" alt="back arrow">
         </a>
-        <h1 id="pageBunnies">{{ categorie.name_geo }}</h1>
+        {% if session['locale'] == 'KA' %}
+            <h1>{{ categorie.name_eng }}</h1>
+        {% else %}
+            <h1>{{ categorie.name_geo }}</h1>
+        {% endif %}
+
         <section class="bunnies">
             <ul>
                 {% for toy in toys %}
@@ -16,7 +21,7 @@
                             <img src="{{ url_for('static', filename='img/products/' + toy.photo) }}" alt="{{ toy.name_eng }}">
                             <div class="product-info">
                                 <span>{{ toy.price }}₾</span>
-                                <button id="buyButton1">შეძენა</button>
+                                <button id="buyButton1">{{_('შეძენა')}}</button>
                             </div>
                         </a>
                     </li>
