--- a/app/templates/auth/login.html
+++ b/app/templates/auth/login.html
@@ -1,29 +1,36 @@
-<!doctype html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport"
-          content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
-    <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Login</title>
-</head>
-<body>
-<form method="post">
-    {{ form.hidden_tag() }}
-    <div>
-        <div>
-            {{ form.email.label }}
-            {{ form.email }}
+{% extends "layouts/base.html" %}
+{% block main %}
+<main>
+    <div class="container login-container">
+        <h1>{{_('შესვლა')}}</h1>
+        <form class="authorize" method="post">
+            {{ form.hidden_tag() }}
+            <div>
+                {{ form.email.label }}
+                {{ form.email }}
+            </div>
+            <div>
+                {{ form.password.label }}
+                {{ form.password }}
+            </div>
+            <label class="confirm-terms">
+                <input type="checkbox" name="remember">
+                <span>{{_('გავეცანი დოკუმენტს')}}:</span>
+                <a href="{{ url_for('main.terms') }}">{{_('წესები და პირობები')}}</a>
+            </label>
+            <div class="login-btn">
+                {{ form.submit(class='submit') }}
+            </div>
+        </form>
+        <div class="calltoaction">
+            <span>{{_('არ გაქვთ პროფილი? გაიარეთ')}}</span>
+            <a href="{{url_for('auth.register')}}">{{_('რეგისტრაცია')}}</a>
         </div>
-        <div>
-            {{ form.password.label }}
-            {{ form.password }}
-        </div>
-        <div>
-            {{ form.submit.label }}
-            {{ form.submit }}
+        <div class="calltoaction">
+            <span>{{_('დაგავიწყდათ პაროლი')}}? </span>
+            <a href="{{url_for('auth.register')}}">{{_('პაროლის აღდგენა')}}</a>
         </div>
     </div>
-</form>
-</body>
-</html>
+</main>
+{% endblock %}
+
