--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -719,11 +719,12 @@ footer a {
 
 .authorize div {
     width: 30%;
+    min-width: 450px;
     display: flex;
     flex-direction: column;
 }
 
-.authorize label, .submit {
+.authorize label, .authorize button {
     font-family: var(--main-font-ge);
     font-size: var(--size-18);
 }
@@ -741,7 +742,7 @@ footer a {
     border-radius: 20px;
 }
 
-.submit {
+.authorize button {
     width: 30%;
     height: 2rem;
     border: 2px solid var(--text-color);
@@ -890,7 +891,7 @@ footer a {
 }
 
 @media (max-width: 770px) {
-    .cart div, .profile {
+    .cart div {
         display: none;
     }
     .burger {
@@ -917,7 +918,7 @@ footer a {
         padding: 2% 1% 0;
     }
     .languages, .icons {
-        width: 10%;
+        width: 20%;
     }
     .bunnies ul, .other-animals ul {
         grid-template-columns: repeat(2, 1fr);
@@ -941,7 +942,7 @@ footer a {
     .social-icons a {
         max-width: 25px;
     }
-    .languages a {
+    .languages a, .authorize label, .login-btn button, .calltoaction {
         font-size: calc(var(--size-18)*0.7);
     }
     .icons a {
@@ -960,7 +961,8 @@ footer a {
         width: 50%;
     }
     .languages, .icons {
-        width: 20%;
+        width: 25%;
+        gap: 10%;
     }
     .bunnies ul, .other-animals ul {
         grid-template-columns: 1fr;
@@ -1014,6 +1016,13 @@ footer a {
     .terms {
         font-size: calc(var(--size-18)*0.6);
         text-align: right;
+    }
+    .authorize div {
+        width: 100%;
+        min-width: 280px;
+    }
+    .login-btn button {
+        min-width: 135px;
     }
 }
 
